--- a/expenses/templates/expenses/list.html
+++ b/expenses/templates/expenses/list.html
@@ -65,21 +65,47 @@
     // Prepare data for the chart
     var datasets = [];
     var colors = [
-        'rgba(255, 99, 132, 0.2)',
-        'rgba(54, 162, 235, 0.2)',
-        'rgba(255, 159, 64, 0.2)',
-        'rgba(75, 192, 192, 0.2)',
-        'rgba(153, 102, 255, 0.2)',
-        'rgba(255, 159, 64, 0.2)',
-    ];  // Adjust colors as needed
+        "rgba(255, 0, 0, 1)",
+        "rgba(0, 255, 0, 1)",
+        "rgba(0, 0, 255, 1)",
+        "rgba(255, 255, 0, 1)",
+        "rgba(0, 255, 255, 1)",
+        "rgba(255, 0, 255, 1)",
+        "rgba(255, 165, 0, 1)",
+        "rgba(128, 0, 128, 1)",
+        "rgba(255, 192, 203, 1)",
+        "rgba(165, 42, 42, 1)",
+        "rgba(0, 255, 0, 0.8)",
+        "rgba(75, 0, 130, 1)",
+        "rgba(238, 130, 238, 1)",
+        "rgba(0, 128, 128, 1)",
+        "rgba(128, 128, 0, 1)",
+        "rgba(128, 0, 0, 1)",
+        "rgba(0, 0, 128, 1)",
+        "rgba(192, 192, 192, 1)",
+        "rgba(255, 215, 0, 1)"
+      ]
 
     var borderColors = [
-        'rgba(255, 99, 132, 1)',
-        'rgba(54, 162, 235, 1)',
-        'rgba(255, 159, 64, 1)',
-        'rgba(75, 192, 192, 1)',
-        'rgba(153, 102, 255, 1)',
-        'rgba(255, 159, 64, 1)',
+      "rgba(255, 99, 132, 1)",
+      "rgba(54, 162, 235, 1)",
+      "rgba(255, 206, 86, 1)",
+      "rgba(75, 192, 192, 1)",
+      "rgba(153, 102, 255, 1)",
+      "rgba(255, 159, 64, 1)",
+      "rgba(0, 0, 0, 1)",
+      "rgba(255, 69, 0, 1)",
+      "rgba(34, 139, 34, 1)",
+      "rgba(173, 216, 230, 1)",
+      "rgba(106, 90, 205, 1)",
+      "rgba(139, 69, 19, 1)",
+      "rgba(220, 20, 60, 1)",
+      "rgba(47, 79, 79, 1)",
+      "rgba(255, 140, 0, 1)",
+      "rgba(70, 130, 180, 1)",
+      "rgba(127, 255, 212, 1)",
+      "rgba(255, 20, 147, 1)",
+      "rgba(72, 61, 139, 1)"
     ];
 
     // Loop over categories and add each as a dataset
